@@ -254,7 +254,7 @@ s32 MBNG_CV_NotifyReceivedValue(mbng_event_item_t *item)
       u8 *map_values;
       int map_len = MBNG_EVENT_MapGet(item->map, &map_values);
       if( map_len > 0 ) {
-	value16 = MBNG_EVENT_MapIxGet(map_values, map_len, value) * (65536 / map_len);
+	value16 = MBNG_EVENT_MapIxFromValue(map_values, map_len, value) * (65536 / map_len);
       } else if( item->min <= item->max ) {
 	int range = item->max - item->min + 1;
 	value16 = (value - item->min) * (65536 / range);
