@@ -257,7 +257,7 @@ s32 MBNG_MF_NotifyReceivedValue(mbng_event_item_t *item)
       u8 *map_values;
       int map_len = MBNG_EVENT_MapGet(item->map, &map_values);
       if( map_len > 0 ) {
-	value14 = MBNG_EVENT_MapIxGet(map_values, map_len, item->value) * (16384 / map_len);
+	value14 = MBNG_EVENT_MapIxFromValue(map_values, map_len, item->value) * (16384 / map_len);
       } else if( item->min <= item->max ) {
 	int range = item->max - item->min + 1;
 	value14 = (item->value - item->min) * (16384 / range);
